hard-gists/5805662/run.log
=== Docker Run Log for 5805662 ===
Started at: Mi 29. Okt 16:04:44 CET 2025

[2025-10-29 16:04:45] START: Running container for 5805662
[2025-10-29 16:04:45] SUCCESS: Container 479d32142302139a881203ef3bd7ef24f49b99ca8549ee1a5f13017feb036c1d started for 5805662
=== Container logs for 5805662 ===
  File "/snippet.py", line 8
    print 'Could not import cv, trying opencv'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5805662 ===
[2025-10-29 16:04:47] INFO: Container 479d32142302139a881203ef3bd7ef24f49b99ca8549ee1a5f13017feb036c1d has stopped
